add dynamic routing to definition page

--- a/views/word_list.erb
+++ b/views/word_list.erb
@@ -7,5 +7,5 @@
 </form>
 <h3>Word list:</h3>
 <% @word_list.each do |key, value| %>
-  <p><%= key %></p>
+  <p><a href="/<%= key%>"><%= key %></a></p>
 <% end %>
