refactor word list to use array for simplicity

--- a/views/word_list.erb
+++ b/views/word_list.erb
@@ -1,7 +1,7 @@
 <h3>Add a word:</h3>
 <form action='/' method='post'>
   <div class='form-group'>
-    <input name='word' class='form-control' type='text'/>
+    <input name='word' class='form-control' type='text'/><br>
     <button type='submit' class='btn btn-primary'>Add</button>
   </div>
 </form>
