--- a/views/definition.erb
+++ b/views/definition.erb
@@ -1,3 +1,3 @@
-<h2><%= @current_word %></h2>
+<h2><%= @current_word %> (<%= @part_of_speech %>)</h2>
 <h4>Definition:</h4>
 <p><%= @definition %></p>
