--- a/views/definition.erb
+++ b/views/definition.erb
@@ -1,3 +1,12 @@
 <h2><%= @current_word %> (<%= @part_of_speech %>)</h2>
 <h4>Definition:</h4>
 <p><%= @definition %></p>
+<h4
+<br>
+<h3>Add a custom definition:</h3>
+<form action='/<%= @current_word %>' method='post'>
+  <div class='form-group'>
+    <input name='word' class='form-control' type='text'/><br>
+    <button type='submit' class='btn btn-primary'>Add</button>
+  </div>
+</form>
