refactor and cleanup files

--- a/views/word_list.erb
+++ b/views/word_list.erb
@@ -3,6 +3,7 @@
   <div class='form-group'>
     <input name='word' class='form-control' type='text'/><br>
     <button type='submit' class='btn btn-primary'>Add</button>
+    <!-- <form><button formaction='/clear' class='btn btn-danger'>Clear List</button></form> -->
   </div>
 </form>
 <h3>Word list:</h3>
